package gogoproto;

import "testdata/descriptor.proto";

extend google.protobuf.FileOptions {
    optional bool goproto_enum_prefix_all = 63002;
    optional string goproto_stringer_all = 5003;
    optional uint64 goproto_stringer_fall = 630354;
    optional float goproto_stringer_gall = 6304;
    optional double goproto_stringer_dall = 6305;
}

extend google.protobuf.MethodOptions {
  optional MyMessage my_method_option = 50006;
}

extend google.protobuf.ServiceOptions {
  optional MyEnum my_service_option = 50005;
  optional MyEnum my_service_option2 = 50105;
}

enum MyEnum {
  FOO = 1;
  BAR = 2;
}

message MyMessage {
  optional int32 foo = 1;
  optional string bar = 2;
}
