package test;

// import comment
import "testdata/gogo.proto";

extend test.MyExtendable {
  optional double FieldA = 100;
  optional NinOptNative FieldB = 101;
  optional NinEmbeddedStruct FieldC = 102;
}

option (gogoproto.marshaler_all)=false;
option (gogoproto.equal_all)=true;
option (gogoproto.goproto_enum_stringer_all)=false;
option (gogoproto.goproto_getters_all)=false;
option (gogoproto.face_all)=true;
option (gogoproto.enum_stringer_all)=true;
option (gogoproto.goproto_enum_prefix_all)=false;
option (gogoproto.unmarshaler_all)=false;
option (gogoproto.gostring_all)=true;
option (gogoproto.description_all)=true;
option (gogoproto.goproto_stringer_all)=false;
option (gogoproto.unsafe_marshaler_all)=false;
option (gogoproto.populate_all)=true;
option (gogoproto.testgen_all)=true;
option (gogoproto.stringer_all)=true;
option (gogoproto.sizer_all)=true;
option (gogoproto.benchgen_all)=true;
option (gogoproto.unsafe_unmarshaler_all)=false;
option (gogoproto.verbose_equal_all)=true;

enum TheTestEnum {
  A = 0;
  B = 1;
  C = 2;
};

enum AnotherTestEnum {
  option (gogoproto.goproto_enum_prefix)=false;

  D = 10;
  E = 11;
};

message NidOptNative {
  optional double Field1 = 1 [(gogoproto.nullable)=false];
  optional float Field2 = 2 [(gogoproto.nullable)=false];
  optional int32 Field3 = 3 [(gogoproto.nullable)=false];
  optional int64 Field4 = 4 [(gogoproto.nullable)=false];
  optional uint32 Field5 = 5 [(gogoproto.nullable)=false];
  optional uint64 Field6 = 6 [(gogoproto.nullable)=false];
  optional sint32 Field7 = 7 [(gogoproto.nullable)=false];
  optional sint64 Field8 = 8 [(gogoproto.nullable)=false];
  optional fixed32 Field9 = 9 [(gogoproto.nullable)=false];
  optional sfixed32 Field10 = 10 [(gogoproto.nullable)=false];
  optional fixed64 Field11 = 11 [(gogoproto.nullable)=false];
  optional sfixed64 Field12 = 12 [(gogoproto.nullable)=false];
  optional bool Field13 = 13 [(gogoproto.nullable)=false];
  optional string Field14 = 14 [(gogoproto.nullable)=false];
  optional bytes Field15 = 15 [(gogoproto.nullable)=false];
}

message NinOptNative {
  optional double Field1 = 1;
  optional float Field2 = 2;
  optional int32 Field3 = 3;
  optional int64 Field4 = 4;
  optional uint32 Field5 = 5;
  optional uint64 Field6 = 6;
  optional sint32 Field7 = 7;
  optional sint64 Field8 = 8;
  optional fixed32 Field9 = 9;
  optional sfixed32 Field10 = 10;
  optional fixed64 Field11 = 11;
  optional sfixed64 Field12 = 12;
  optional bool Field13 = 13;
  optional string Field14 = 14;
  optional bytes Field15 = 15;
}

message NidRepNative {
  repeated double Field1 = 1 [(gogoproto.nullable)=false];
  repeated float Field2 = 2 [(gogoproto.nullable)=false];
  repeated int32 Field3 = 3 [(gogoproto.nullable)=false];
  repeated int64 Field4 = 4 [(gogoproto.nullable)=false];
  repeated uint32 Field5 = 5 [(gogoproto.nullable)=false];
  repeated uint64 Field6 = 6 [(gogoproto.nullable)=false];
  repeated sint32 Field7 = 7 [(gogoproto.nullable)=false];
  repeated sint64 Field8 = 8 [(gogoproto.nullable)=false];
  repeated fixed32 Field9 = 9 [(gogoproto.nullable)=false];
  repeated sfixed32 Field10 = 10 [(gogoproto.nullable)=false];
  repeated fixed64 Field11 = 11 [(gogoproto.nullable)=false];
  repeated sfixed64 Field12 = 12 [(gogoproto.nullable)=false];
  repeated bool Field13 = 13 [(gogoproto.nullable)=false];
  repeated string Field14 = 14 [(gogoproto.nullable)=false];
  repeated bytes Field15 = 15 [(gogoproto.nullable)=false];
}

message NinRepNative {
  repeated double Field1 = 1;
  repeated float Field2 = 2;
  repeated int32 Field3 = 3;
  repeated int64 Field4 = 4;
  repeated uint32 Field5 = 5;
  repeated uint64 Field6 = 6;
  repeated sint32 Field7 = 7;
  repeated sint64 Field8 = 8;
  repeated fixed32 Field9 = 9;
  repeated sfixed32 Field10 = 10;
  repeated fixed64 Field11 = 11;
  repeated sfixed64 Field12 = 12;
  repeated bool Field13 = 13;
  repeated string Field14 = 14;
  repeated bytes Field15 = 15;
}

message NidRepPackedNative {
  repeated double Field1 = 1 [(gogoproto.nullable)=false, packed=true];
  repeated float Field2 = 2 [(gogoproto.nullable)=false, packed=true];
  repeated int32 Field3 = 3 [(gogoproto.nullable)=false, packed=true];
  repeated int64 Field4 = 4 [(gogoproto.nullable)=false, packed=true];
  repeated uint32 Field5 = 5 [(gogoproto.nullable)=false, packed=true];
  repeated uint64 Field6 = 6 [(gogoproto.nullable)=false, packed=true];
  repeated sint32 Field7 = 7 [(gogoproto.nullable)=false, packed=true];
  repeated sint64 Field8 = 8 [(gogoproto.nullable)=false, packed=true];
  repeated fixed32 Field9 = 9 [(gogoproto.nullable)=false, packed=true];
  repeated sfixed32 Field10 = 10 [(gogoproto.nullable)=false, packed=true];
  repeated fixed64 Field11 = 11 [(gogoproto.nullable)=false, packed=true];
  repeated sfixed64 Field12 = 12 [(gogoproto.nullable)=false, packed=true];
  repeated bool Field13 = 13 [(gogoproto.nullable)=false, packed=true];
}

message NinRepPackedNative {
  repeated double Field1 = 1 [packed=true];
  repeated float Field2 = 2 [packed=true];
  repeated int32 Field3 = 3 [packed=true];
  repeated int64 Field4 = 4 [packed=true];
  repeated uint32 Field5 = 5 [packed=true];
  repeated uint64 Field6 = 6 [packed=true];
  repeated sint32 Field7 = 7 [packed=true];
  repeated sint64 Field8 = 8 [packed=true];
  repeated fixed32 Field9 = 9 [packed=true];
  repeated sfixed32 Field10 = 10 [packed=true];
  repeated fixed64 Field11 = 11 [packed=true];
  repeated sfixed64 Field12 = 12 [packed=true];
  repeated bool Field13 = 13 [packed=true];
}

message NidOptStruct {
  optional double Field1 = 1 [(gogoproto.nullable)=false];
  optional float Field2 = 2 [(gogoproto.nullable)=false];
  optional NidOptNative Field3 = 3 [(gogoproto.nullable)=false];
  optional NinOptNative Field4 = 4 [(gogoproto.nullable)=false];
  optional uint64 Field6 = 6 [(gogoproto.nullable)=false];
  optional sint32 Field7 = 7 [(gogoproto.nullable)=false];
  optional NidOptNative Field8 = 8 [(gogoproto.nullable)=false];
  optional bool Field13 = 13 [(gogoproto.nullable)=false];
  optional string Field14 = 14 [(gogoproto.nullable)=false];
  optional bytes Field15 = 15 [(gogoproto.nullable)=false];
}

message NinOptStruct {
  optional double Field1 = 1;
  optional float Field2 = 2;
  optional NidOptNative Field3 = 3;
  optional NinOptNative Field4 = 4;
  optional uint64 Field6 = 6;
  optional sint32 Field7 = 7;
  optional NidOptNative Field8 = 8;
  optional bool Field13 = 13;
  optional string Field14 = 14;
  optional bytes Field15 = 15;
}

message NidRepStruct {
  repeated double Field1 = 1 [(gogoproto.nullable)=false];
  repeated float Field2 = 2 [(gogoproto.nullable)=false];
  repeated NidOptNative Field3 = 3 [(gogoproto.nullable)=false];
  repeated NinOptNative Field4 = 4 [(gogoproto.nullable)=false];
  repeated uint64 Field6 = 6 [(gogoproto.nullable)=false];
  repeated sint32 Field7 = 7 [(gogoproto.nullable)=false];
  repeated NidOptNative Field8 = 8 [(gogoproto.nullable)=false];
  repeated bool Field13 = 13 [(gogoproto.nullable)=false];
  repeated string Field14 = 14 [(gogoproto.nullable)=false];
  repeated bytes Field15 = 15 [(gogoproto.nullable)=false];
}

message NinRepStruct {
  repeated double Field1 = 1;
  repeated float Field2 = 2;
  repeated NidOptNative Field3 = 3;
  repeated NinOptNative Field4 = 4;
  repeated uint64 Field6 = 6;
  repeated sint32 Field7 = 7;
  repeated NidOptNative Field8 = 8;
  repeated bool Field13 = 13;
  repeated string Field14 = 14;
  repeated bytes Field15 = 15;
}

message NidEmbeddedStruct {
  optional NidOptNative Field1 = 1 [(gogoproto.embed)=true];
  optional NidOptNative Field200 = 200 [(gogoproto.nullable)=false];
  optional bool Field210 = 210 [(gogoproto.nullable)=false];
}

message NinEmbeddedStruct {
  optional NidOptNative Field1 = 1 [(gogoproto.embed)=true];
  optional NidOptNative Field200 = 200;
  optional bool Field210 = 210;
}

message NidNestedStruct {
  optional NidOptStruct Field1 = 1 [(gogoproto.nullable)=false];
  repeated NidRepStruct Field2 = 2 [(gogoproto.nullable)=false];
}

message NinNestedStruct {
  optional NinOptStruct Field1 = 1;
  repeated NinRepStruct Field2 = 2;
}

message NidOptCustom {
  optional bytes Id = 1 [(gogoproto.customtype)="Uuid", (gogoproto.nullable)=false];
  optional bytes Value = 2 [(gogoproto.customtype)="code.google.com/p/gogoprotobuf/test/custom.Uint128", (gogoproto.nullable)=false];
}

message NinOptCustom {
  optional bytes Id = 1 [(gogoproto.customtype)="Uuid"];
  optional bytes Value = 2 [(gogoproto.customtype)="code.google.com/p/gogoprotobuf/test/custom.Uint128"];
}

message NidRepCustom {
  repeated bytes Id = 1 [(gogoproto.customtype)="Uuid", (gogoproto.nullable)=false];
  repeated bytes Value = 2 [(gogoproto.customtype)="code.google.com/p/gogoprotobuf/test/custom.Uint128", (gogoproto.nullable)=false];
}

message NinRepCustom {
  repeated bytes Id = 1 [(gogoproto.customtype)="Uuid"];
  repeated bytes Value = 2 [(gogoproto.customtype)="code.google.com/p/gogoprotobuf/test/custom.Uint128"];
}

message NinOptNativeUnion {
  option (gogoproto.union)=true;

  optional double Field1 = 1;
  optional float Field2 = 2;
  optional int32 Field3 = 3;
  optional int64 Field4 = 4;
  optional uint32 Field5 = 5;
  optional uint64 Field6 = 6;
  optional bool Field13 = 13;
  optional string Field14 = 14;
  optional bytes Field15 = 15;
}

message NinOptStructUnion {
  option (gogoproto.union)=true;

  optional double Field1 = 1;
  optional float Field2 = 2;
  optional NidOptNative Field3 = 3;
  optional NinOptNative Field4 = 4;
  optional uint64 Field6 = 6;
  optional sint32 Field7 = 7;
  optional bool Field13 = 13;
  optional string Field14 = 14;
  optional bytes Field15 = 15;
}

message NinEmbeddedStructUnion {
  option (gogoproto.union)=true;

  optional NidOptNative Field1 = 1 [(gogoproto.embed)=true];
  optional NinOptNative Field200 = 200;
  optional bool Field210 = 210;
}

message NinNestedStructUnion {
  option (gogoproto.union)=true;

  optional NinOptNativeUnion Field1 = 1;
  optional NinOptStructUnion Field2 = 2;
  optional NinEmbeddedStructUnion Field3 = 3;
}

message Tree {
  option (gogoproto.union)=true;

  optional OrBranch Or = 1;
  optional AndBranch And = 2;
  optional Leaf Leaf = 3;
}

message OrBranch {
  optional Tree Left = 1 [(gogoproto.nullable)=false];
  optional Tree Right = 2 [(gogoproto.nullable)=false];
}

message AndBranch {
  optional Tree Left = 1 [(gogoproto.nullable)=false];
  optional Tree Right = 2 [(gogoproto.nullable)=false];
}

message Leaf {
  optional int64 Value = 1 [(gogoproto.nullable)=false];
  optional string StrValue = 2 [(gogoproto.nullable)=false];
}

message DeepTree {
  option (gogoproto.union)=true;

  optional ADeepBranch Down = 1;
  optional AndDeepBranch And = 2;
  optional DeepLeaf Leaf = 3;
}

message ADeepBranch {
  optional DeepTree Down = 2 [(gogoproto.nullable)=false];
}

message AndDeepBranch {
  optional DeepTree Left = 1 [(gogoproto.nullable)=false];
  optional DeepTree Right = 2 [(gogoproto.nullable)=false];
}

message DeepLeaf {
  optional Tree Tree = 1 [(gogoproto.nullable)=false];
}

message Nil {}

message NidOptEnum {
  optional test.TheTestEnum Field1 = 1 [(gogoproto.nullable)=false];
}

message NinOptEnum {
  optional test.TheTestEnum Field1 = 1;
}

message NidRepEnum {
  repeated test.TheTestEnum Field1 = 1 [(gogoproto.nullable)=false];
}

message NinRepEnum {
  repeated test.TheTestEnum Field1 = 1;
}

message NinOptEnumDefault {
  option (gogoproto.goproto_getters)=true;
  option (gogoproto.face)=false;

  optional test.TheTestEnum Field1 = 1;
}

message AnotherNinOptEnum {
  optional test.AnotherTestEnum Field1 = 1;
}

message AnotherNinOptEnumDefault {
  option (gogoproto.goproto_getters)=true;
  option (gogoproto.face)=false;

  optional test.AnotherTestEnum Field1 = 1;
}

message Timer {
  optional sfixed64 Time1 = 1 [(gogoproto.nullable)=false];
  optional sfixed64 Time2 = 2 [(gogoproto.nullable)=false];
  optional bytes Data = 3 [(gogoproto.nullable)=false];
}

message MyExtendable {
  option (gogoproto.face)=false;

  optional int64 Field1 = 1;

  extensions 100 to 199;
}

message OtherExtendable {
  option (gogoproto.face)=false;

  optional int64 Field2 = 2;
  optional int64 Field13 = 13;
  optional MyExtendable M = 1;

  extensions 14 to 16;

  extensions 10 to 12;

}

message NestedDefinition {
  optional int64 Field1 = 1;
  optional NestedEnum EnumField = 2;
  optional NestedMessage.NestedNestedMsg NNM = 3;
  optional NestedMessage NM = 4;

  enum NestedEnum {
    TYPE_NESTED = 1;
  };

  message NestedMessage {
    optional fixed64 NestedField1 = 1;
    optional NestedNestedMsg NNM = 2;

    message NestedNestedMsg {
      optional string NestedNestedField1 = 10;
    }
  }
}

message NestedScope {
  optional test.NestedDefinition.NestedMessage.NestedNestedMsg A = 1;
  optional test.NestedDefinition.NestedEnum B = 2;
  optional test.NestedDefinition.NestedMessage C = 3;
}

message NinOptNativeDefault {
  option (gogoproto.goproto_getters)=true;
  option (gogoproto.face)=false;

  optional double Field1 = 1;
  optional float Field2 = 2;
  optional int32 Field3 = 3;
  optional int64 Field4 = 4;
  optional uint32 Field5 = 5;
  optional uint64 Field6 = 6;
  optional sint32 Field7 = 7;
  optional sint64 Field8 = 8;
  optional fixed32 Field9 = 9;
  optional sfixed32 Field10 = 10;
  optional fixed64 Field11 = 11;
  optional sfixed64 Field12 = 12;
  optional bool Field13 = 13;
  optional string Field14 = 14;
  optional bytes Field15 = 15;
}

message CustomContainer {
  optional NidOptCustom CustomStruct = 1 [(gogoproto.nullable)=false];
}